new sun.misc.Signal("INFO") throws IllegalArgumentException since JDK11

XMLWordPrintable

    • b20
    • other

        It used to work fine in older versions.

        * SIGINFO was available in JDK 8 (jvm_bsd.cpp) but it seems it was accidentally removed during consolidation of the signal list in os_posix.cpp.
        * SIGINFO is the only missing signal compared to signal lists in JDK 8.

        The fix is simple:
        {noformat}
        diff --git a/src/hotspot/os/posix/os_posix.cpp b/src/hotspot/os/posix/os_posix.cpp
        index 017a107300..cdada0093e 100644
        --- a/src/hotspot/os/posix/os_posix.cpp
        +++ b/src/hotspot/os/posix/os_posix.cpp
        @@ -784,6 +784,9 @@ static const struct {
           { SIGHUP, "SIGHUP" },
           { SIGILL, "SIGILL" },
           { SIGINT, "SIGINT" },
        +#ifdef SIGINFO
        + { SIGINFO, "SIGINFO" },
        +#endif
         #ifdef SIGIO
           { SIGIO, "SIGIO" },
         #endif
        {noformat}

              Assignee:
              Benoit Daloze (Inactive)
              Reporter:
              Benoit Daloze (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: