8232571: Add missing SIGINFO signal

Reviewed-by: dholmes, rriggs